--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/applecrumble.html">Nana's Apple Crumble</a></li>
-        <li><a href="recipes/deepfriedpeanuts.html">Deep-Fried Peanuts</a>></li>
+        <li><a href="recipes/deepfriedpeanuts.html">Deep-Fried Peanuts</a></li>
         <li><a href="recipes/southernpimentocheese.html">Southern Pimento Cheese</a></li>
     </ul>
 </body>
